@@ -12,6 +12,8 @@ CHANGES
   -l all settings descriptions
   -p dump all default settings
 
+- Added process shutdown support `memphis.config.shutdownHandler`
+
 
 0.6 (2011-06-29)
 ----------------
